<resources>
    <string name="app_name">Sensor Record</string>

    <!-- Login activity -->
    <string name="title_activity_login">Log in</string>
    <string name="login_title">Log in</string>
    <string name="hint_username">Username</string>
    <string name="login_button_text">Log in</string>

    <!-- Snackbars -->
    <string name="snackbar_request_permission">Request</string>
    <string name="snackbar_dismiss">Dismiss</string>

    <!-- Permissions -->
    <string name="permission_explain">Hardware permissions required for this app to work</string>
    <string name="permission_explain_gps">Location data permission required for GPS access</string>
    <string name="permission_explain_write_storage">Storage write permission required to save data</string>
    <string name="permission_explain_wake_lock">Wake lock permission required to record sensor data</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_new">New</string>
    <string name="nav_start">Start Record</string>
    <string name="nav_save">Save &amp; Quit</string>
    <string name="nav_detected">Behavior Detection</string>
    <string name="nav_raw">Raw Data</string>
    <string name="nav_accelerometer">Accelerometer</string>
    <string name="nav_magnetometer">Magnetometer</string>
    <string name="nav_gyroscope">Gyroscope</string>
    <string name="nav_orientation">Orientation</string>

    <!-- New participant fragment-->
    <string name="input_text_ra">Name</string>
    <string name="input_text_job">Job</string>
    <string name="input_text_age">Age</string>
    <string name="input_text_version">Android Version</string>
    <string name="input_text_version_hint">Device version</string>
    <string name="input_text_sex">Sex:</string>
    <string name="new_sex_male_label">Male</string>
    <string name="new_sex_female_label">Female</string>
    <string name="input_text_height">Height:</string>
    <string name="input_text_height_cm">centimeters</string>
    <string name="input_text_height_ft">feet</string>
    <string name="input_text_height_in">inches</string>
    <string name="new_height_ft_symbol">\'</string>
    <string name="new_height_in_symbol">\"</string>
    <string name="input_button_save">Create user</string>

    <!-- Raw sensor data fragment -->
    <string name="raw_acc_header">Accelerometer</string>
    <string name="raw_gyro_header">Gyroscope</string>
    <string name="raw_mag_header">Magnetic</string>
    <string name="raw_gps_header">GPS</string>
    <string name="raw_rotation_header">Rotation Matrix</string>

    <!-- Subject info fragment -->
    <string name="subInfo_label_name">Name:</string>
    <string name="subInfo_label_age">Age:</string>
    <string name="subInfo_label_job">Job:</string>
    <string name="subInfo_label_gender">Gender:</string>
    <string name="subInfo_label_device">Device version:</string>
    <string name="subInfo_label_edit_button">Delete information</string>
    <string name="subInfo_message_recording">(Cannot delete while recording data)</string>

    <!-- Start fragment -->
    <string name="record_frequency">Frequency record:</string>
    <string name="record_frequency_hint">1 ~ 100</string>
    <string name="record_frequency_unit">Hz</string>
    <string name="start_button_label_start">Start</string>
    <string name="start_button_label_stop">Stop</string>
    <string name="start_recording_complete">Recording complete.</string>
    <string name="start_recording">Recording…</string>
    <string name="start_recording_progress">Recording in progress. Please wait…</string>
    <string name="record_template_action">Select template of record data</string>

    <!-- Save fragment -->
    <string name="save_button_text">Save &#038; Quit</string>
    <string name="save_button_text_quit">Quit</string>
    <string name="save_instruction_text">Sensor data collected. Click to save the data and quit the current session:</string>
    <string name="save_no_data_text">No sensor data collected. Click to quit the current session:</string>
    <string name="save_message_recording">Cannot save or quit while recording data</string>

    <string name="device_accelerometer_label">Accelerometer:</string>
    <string name="device_gyroscope_label">Gyroscope:</string>
    <string name="device_gravity_label">Gravity:</string>
    <string name="device_magnetometer_label">Magnetometer:</string>

    <!-- Device version -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version_device_5">Android 5: Lollipop</string>
    <string name="version_device_6">Android 6: Marshmallow</string>
    <string name="version_device_7">Android 7: Nougat</string>
    <string name="version_device_8">Android 8: Oreo</string>
    <string name="version_device_9">Android 9: Pie</string>
    <string name="version_device_10">Android 10</string>

    <string name="subInfo_label_device_name">Device name</string>
    <string name="record_vehicle_action">Vehicle</string>
    <string name="record_time_length">Record time</string>
    <string name="record_time_length_unit">second</string>
    <string name="sensor_type_title">Sensor type</string>
    <string name="sensor_type_all">All</string>

    <string-array name="sample_data">
        <item>STD - Standing</item>
        <item>WAL - Walking</item>
        <item>JOG - Jogging</item>
        <item>JUM - Jumping</item>
        <item>STU - Stairs up</item>
        <item>STN - Stairs down</item>
        <item>SCH - Stand to sit(sit on chair)</item>
        <item>SIT - Sitting on chair</item>
        <item>CHU - Sit to stand(chair up)</item>
        <item>CSI - Car-step in</item>
        <item>CSO - Car-step out</item>
        <item>LYI - Lying</item>
        <item>FOL - Forward-lying</item>
        <item>FKL - Front-knees-lying</item>
        <item>BSC - Back-sitting-chair</item>
        <item>SDL - Sideward-lying</item>
    </string-array>

    <string-array name="vehicle">
        <item>None(Walking)</item>
        <item>Bicycle</item>
        <item>Electric Bicycle</item>
        <item>Car</item>
        <item>Bus</item>
    </string-array>

</resources>
