<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/start_layout_padding"
    tools:context="com.example.sensorrecord.fragment.RecordFragment">

    <LinearLayout
        android:id="@+id/frequency_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_frequency"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/frequency_value"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:gravity="center"
            android:hint="@string/record_frequency_hint"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1"
            android:text="50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_frequency_unit"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_max_time_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/frequency_layout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/record_time_length"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/time_record"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:digits="0123456789"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1"
            android:text="15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/record_time_length_unit"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sensor_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_max_time_layout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/sensor_type_title"
            android:textSize="17sp" />

        <RadioGroup
            android:id="@+id/sensor_type_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/nav_accelerometer" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_gyroscope" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_orientation" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor_type_all" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vehicle_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sensor_select"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/record_vehicle_action"
            android:textSize="17sp">

        </TextView>

        <Spinner
            android:id="@+id/spinner_vehicle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:entries="@array/vehicle"
            tools:listitem="@layout/support_simple_spinner_dropdown_item" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/template_of_action_button_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/vehicle_selection"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/template_of_action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <Button
        android:id="@+id/startButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/template_of_action_button_layout"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="8dp"
        android:text="@string/start_button_label_start" />

    <TextView
        android:id="@+id/start_recording_progress"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/start_element_height"
        android:layout_below="@id/startButton"
        android:layout_centerHorizontal="true"
        android:textColor="@color/graphZ" />

</RelativeLayout>
